# vortex-cx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  TODO.txt  VERSIONS.txt  build.bat  build.command  build.sh  build_tools.bat  build_tools.command  build_tools_l32.sh  build_tools_l64.sh  compress.bat  convert2monkey.monkey  fonttool.cxs  fonttool.monkey  level.monkey  meshtool.cxs  meshtool.monkey  proc.monkey  run_examples.command  run_tests.bat  run_tests.command  run_tests.sh  run_tutorials.command  tests.monkey  tests_proc.monkey  todo.txt  versions.txt  vortex.cerberusdoc  vortex.cxs  vortex.monkey  vortex.monkeydoc
cerberusdoc/: vortex.cerberusdoc
core/: bone.monkey  brush.monkey  core.monkey  drawable.monkey  font.monkey  lighting.monkey  math3d.monkey  mesh.monkey  painter.monkey  renderer.monkey  renderer_gles20.monkey  renderer_gles20_shaders.monkey  surface.monkey  texture.monkey  viewer.monkey
demos/: demo_angel.cxs  demo_hoverbike.cxs  demo_mars.cxs  demo_robot.cxs  demo_swamp.cxs  demo_vangogh.cxs
examples/: image.c  primitives.c
ext/: cache.monkey  ext.monkey  fontloader.monkey  fontloader_json.monkey  fontloader_xml.monkey  meshloader.monkey  meshloader_json.monkey  meshloader_xml.monkey
fonttool/: main.cpp
fonttool/src/: fonttool.pro  main.cpp
html_tests/robot/: index.html  main.js
level.data/: simple-dm5.msh.xml
lib/base64/: README.txt
lib/cask/: array.c  array.h  memory.c  memory.h  memorypool.c  memorypool.h
lib/tinyfiledialogs/: tinyfiledialogs.c
meshtool/: CMakeLists.txt  handedness.h  main.cpp  mesh.cpp  mesh.h  swat.x
meshtool.data/: dialog.bat
meshtool/source/: meshtool.cpp  meshtool.pro
meshtool/src/: main.cpp  mesh.cpp  stringutils.h
src/: bone.cxs  bone.monkey  brush.monkey  cache.cxs  cache.monkey  camera.cxs  collision.cxs  color.c  color.cxs  color.h  config.monkey  default_font.h  drawable.monkey  entity.cxs  file_system.c  file_system.h  font.c  font.cxs  font.h  font.monkey  fontloader_xml.monkey  framebuffer.cxs  framebuffer.monkey  graphics.cxs  handedness.monkey  input.c  input.h  input_allegro.h  input_glfw.h  input_sdl.h  light.cxs  lighting.cxs  lighting.monkey  listener.cxs  loader_b3d.cxs  material.cxs  material.monkey  math3d.cxs  math3d.monkey  math3d.monkey2  (+46 more)
src.fonttool/: main.cpp
src.meshtool/: handedness.h  main.cpp  mesh.cpp  mesh.h
src.meshtool/irrlicht/: IrrCompileConfig.h
src_meshtool/: dialog.monkey  fltkrequestcolor.cc  fltkrequestcolor.monkey  fltkrequestfile.cc  fltkrequestfile.monkey  genxml.cc  gui.monkey  guifuncs.monkey  irrlicht_config.txt  lib.monkey  loadmesh.cc  loadmesh.monkey  loadmesh_dll.monkey  mesh.h  mesh.monkey  meshtool.cc  savemesh.monkey  stringutils.h
src_meshtool/native/: lib.cpp  tinyfiledialogs.cpp
src_tools/: dialog.cxs  dialog.monkey  font.cxs  font.monkey  fonttool.cc  fonttool_gui.cxs  genxml.cc  guifuncs.cxs  guifuncs.monkey  irrlicht_config.txt  loadmesh.cc  mesh.cxs  mesh.h  mesh.monkey  meshtool.cc  meshtool_gui.cxs  meshtool_gui.monkey  meshtool_gui_pyro.cxs  savefonttexture.cc  savemesh.cc  stringutils.h  xml.cxs  xml.monkey
src_tools/irrlicht/: IrrCompileConfig.h
src_tools/native/: dialog.cpp  tinyfiledialogs.h
stuff/: 2d_fragment.glsl  2d_vertex.glsl  assimp_params.txt  dwarf.msh  export_shaders.bmx  export_shaders.monkey  gen_all.bat  gen_all.sh  gen_defaultfont.cc  gen_inputcodes.cc  inputcodes.txt  logo.icns  logo_license.txt  pak_editor.bmx  std_fragment.glsl  std_vertex.glsl
stuff/removed_docs/: vortex.cerberusdoc
stuff/removed_tests/: test_animation.cxs  test_linesphere.cxs
test/: liteunit.h  test.c
tests/: level.monkey  test.c  test.monkey  test.pak  test_angel.cxs  test_animation.cxs  test_animation.monkey  test_animsprite.cxs  test_billboards.cxs  test_billboards.monkey  test_binmesh.monkey  test_capture.cxs  test_collisions.cxs  test_fog.cxs  test_image.cxs  test_image.monkey  test_level.cxs  test_level.monkey  test_lighting.cxs  test_lighting.monkey  test_linesphere.cxs  test_listener.cxs  test_material.cxs  test_material.monkey  test_mojo2.cxs  test_picking.cxs  test_primitives.cxs  test_primitives.monkey  test_project.cxs  test_rendertotexture.cxs  test_robot.cxs  test_settexturepixels.cxs  test_shadows.cxs  test_shadows.monkey  test_specular.cxs  test_sprites.cxs  test_staticcollision.cxs  test_swamp.cxs  test_triangle.cxs  test_triangle.monkey  (+4 more)
tests.data/: ProFontWindows_32.fnt.json  eurofurence_24.fnt.json  sphere.msh.json  swat.msh.json  swat.msh.xml
tests/test_angel.data/: angel.msh
tests/test_animation.data/: dwarf.anm  dwarf.msh  dwarf.msh.xml  dwarf.skl  swat.anm  swat.msh  swat.msh.xml  swat.skl  system_16.fnt.xml
tests/test_binmesh.data/: dwarf.msh
tests/test_level.data/: ruin.msh  ruin.msh.xml  simple-dm5.msh.xml  system.fnt
tests/test_lighting.data/: sphere.msh  sphere.msh.xml
tests/test_listener.data/: heli-license.txt
tests/test_material.data/: cube.msh  cube.msh.xml
tests/test_shadows.data/: low-poly-mill.msh
tests/test_vangogh.data/: vangogh.msh
tests/tests.data/: cube.msh.xml  dwarf.msh.xml  eurofurence_24.fnt.xml  simple-dm5.msh.xml  sphere.msh.xml  system_16.fnt.xml
tests_proc.data/: swat.msh.xml
tutorial/: image.c  primitives.c
vortex/core/: bone.monkey  lighting.monkey  painter.monkey  sequence.monkey  surface.monkey  viewer.monkey
